removing a bug with edit section overflowing the main section

--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -38,16 +38,18 @@ h1 {
   box-shadow: 0 3rem 5rem rgba(0, 0, 0, 0.3);
   z-index: 10;
 
-  opacity: 0; 
-  transition: opacity 0.5s ease;
+  opacity: 1;
+  transition: all .3s ease;
 
   &.hidden {
     opacity: 0;
+    visibility: hidden;
+
   }
 
-  &.fade-in {
-    opacity: 1;
-  }
+  //&.fade-in {
+  //  opacity: 1;
+  //}
 
 }
 
@@ -60,15 +62,18 @@ h1 {
   background-color: rgba(0, 0, 0, 0.6);
   backdrop-filter: blur(3px);
   z-index: 5;
+  transition: opacity .5s ease-in;
+  opacity: 1;
 
   &.hidden {
     opacity: 0;
-    transform: translateY(-50px);
+    visibility: hidden;
+
   }
 
-  &.fade-in {
-    opacity: 1;
-  }
+  //&.fade-in {
+  //  opacity: 1;
+  //}
 }
 
 
